# projecto

./: Achieve.h  Action.h  CMakeLists.txt  Character.h  ConsoleApplication7.cpp  Intro.cpp  Intro.h  Tasks.h  changeparams.h  game linking.cpp  main.cpp  sd.cpp  with_sfml.sln  youdead.h
